--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.11.5",
     "prisma": "^5.9.1",
     "tsx": "^4.7.0",
