--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.323.0",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.1.0",
-    "framer-motion": "^11.0.3",
-    "zustand": "^4.5.0",
-    "date-fns": "^3.3.1",
-    "lucide-react": "^0.323.0",
-    "zod": "^3.22.4"
+    "recharts": "^3.7.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5.3.3"
   }
 }
