Add deploy configs, Postgres, CORS, env examples
Prepare repository for Vercel deployment and production DB: added backend and frontend .env examples, new vercel.json, and shell/PowerShell prepare-deploy scripts. Switched Prisma datasource to PostgreSQL and updated backend package.json scripts (prisma generate/postinstall, migrate:deploy, vercel-build). Improved server CORS handling in backend/src/server.ts to allow specified origins, Vercel subdomains, and credentials.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && npm run build"
   },
   "keywords": [],
   "author": "",
