Add Express app and update Vercel config
Create a new backend entrypoint (backend/src/index.ts) that initializes an Express app, configures CORS (allowing localhost, FRONTEND_URL env and Vercel subdomains), mounts API routes (auth, team, board, card, column, metrics), and adds health, 404 and error handlers. Add frontend/.env.production with NEXT_PUBLIC_API_URL set to the deployed Vercel URL. Update vercel.json to point builds and API route destination to backend/src/index.ts (replacing the previous server.ts reference) so the deployment uses the new entrypoint.

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/server.ts",
+      "src": "backend/src/index.ts",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
@@ -18,7 +18,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/src/server.ts"
+      "dest": "backend/src/index.ts"
     },
     {
       "src": "/(.*)",
