Use index.ts entry, improve CORS, add redirect
Backend: switch package.json entry/scripts to src/index.ts; add PORT handling, include Vercel origin and stricter origin checks in CORS, and only start the HTTP server when module is run directly. Frontend: refactor dashboard to a ProtectedRoute with DashboardRedirect that redirects authenticated users to /teams and shows a loading state, replacing the previous tab-based UI. Note: page.tsx contains rearranged JSX and import changes that may require follow-up cleanup to remove leftover references or resolve build issues.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "kanban-backend",
   "version": "1.0.0",
   "description": "Backend do Kanban To-Do Full Stack",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
