--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
+# Após fazer deploy do backend, substitua a URL abaixo pela URL real
+# Exemplo: NEXT_PUBLIC_API_URL=https://kanban-backend-xxx.vercel.app
 NEXT_PUBLIC_API_URL=https://kanban-to-do-full-stack.vercel.app
