Update production API URL
Set NEXT_PUBLIC_API_URL in frontend/.env.production to the kanban backend deployment (https://kanban-to-do-backend.vercel.app) and remove the previous example/commented lines.

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,1 @@
-# Após fazer deploy do backend, substitua a URL abaixo pela URL real
-# Exemplo: NEXT_PUBLIC_API_URL=https://kanban-backend-xxx.vercel.app
-NEXT_PUBLIC_API_URL=https://kanban-to-do-full-stack.vercel.app
+NEXT_PUBLIC_API_URL=https://kanban-to-do-backend.vercel.app
