--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.323.0",
     "next": "14.2.35",
     "react": "^18.2.0",
